--- a/index.html
+++ b/index.html
@@ -1,53 +1,57 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Socket.IO Chat Example</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
-<link rel="stylesheet" href="style.css">
-</head>
-<body>
-	
-	<div class="container">
-		<div class="chat col-md-8">
-		</div>
-		
-		<div class="form-group">
-			<textarea class="form-control m" id="exampleTextarea" rows="3"></textarea>
-		</div>
-		
-		<div class="form-group">
-			<button type="button" class="btn btn-success btn-lg btn-block send">Send</button>
-		</div>
-	</div>
-	<script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-	<script src="/socket.io/socket.io.js"></script>
-	<!-- <script src="/main.js"></script> -->
-	<script>
-		var socket = io('http://localhost:3000/');
-		
-		function createMessage(type, text) {
-			let div = document.createElement('div');
-			div.textContent = text;
-			div.classList.add('bubble');
-			div.classList.add(type);
-			document.querySelector('.chat').appendChild(div);
-		}
-		
-		document.querySelector('.send')
-			.addEventListener('click', ev => { 
-				ev.preventDefault();
-				let text = document.querySelector('.m').value;
-				createMessage('me', text);
-				socket.emit('message', text);
-			});
-		
-		socket.on('new message', function(data) {
-			createMessage('you', data);
-		});
-	</script>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <title>Socket.IO Chat Example</title>
+        <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"></script>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.nicescroll/3.6.8-fix/jquery.nicescroll.min.js"></script>
+        <link rel="stylesheet" href="style.css">
+        <div class="content container-fluid bootstrap snippets">
+            <div class="row row-broken">
+                <div class="col-sm-3 col-xs-12">
+                    <div class="col-inside-lg decor-default chat" style="overflow: hidden; outline: none; padding: 0;" tabindex="5000">
+                        <div class="chat-users">
+                            <h6>Lobbys <span class="global-online" style="font-size: 10px; float: right"></span></h6> 
+                            <div class="user active">
+								<div class="row">
+									<div class="avatar">
+										<img src="https://bootdey.com/img/Content/avatar/avatar1.png" alt="User name">
+									</div>
+									<div style="padding-left:20px">
+										<div class="name">Global</div>
+										<div class="mood">lastmessage</div>
+									</div>
+								</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-8 col-xs-12" style="overflow: hidden; outline: none; padding: 0" tabindex="5001">
+					<div class="col-inside-lg decor-default">
+						<div class="chat-body">
+							<h6>Global</h6>
+						</div>
+					</div>
+					<div class="cht">
+						<div class="chat answers"></div>
+					</div>
+					<div class="answer-add">
+						<input class="m" placeholder="Write a message">
+						<span class="answer-btn answer-btn-2 send"></span>
+					</div>
+				</div>
+            </div>
+        </div>
+        <script src="/socket.io/socket.io.js"></script>
+        <script src="/main.js"></script>
+        <script>
+            $(function(){
+            	$(".cht").niceScroll();
+            });
+        </script>
+        </body>
 </html>
