--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 						<div class="chat answers"></div>
 					</div>
 					<div class="answer-add">
-						<input class="m" placeholder="Write a message">
+						<input class="m" type="text" placeholder="Write a message">
 						<span class="answer-btn answer-btn-2 send"></span>
 					</div>
 				</div>
