font design update

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 										<img src="https://bootdey.com/img/Content/avatar/avatar1.png" alt="User name" id = "rotateImg">
 									</div>
 									<div style="padding-left:20px">
-										<div class="name">Global</div>
+										<div class="name"><span>Global</span></div>
 										<div class="mood">lastmessage</div>
 									</div>
 								</div>
@@ -67,6 +67,9 @@
         }
      } 
 });
+</script>
+<script>
+$(".name").lettering('words').children('span').lettering();
 </script>
         </body>
 </html>
