--- a/Tests/report.html
+++ b/Tests/report.html
@@ -1567,22 +1567,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[0,0,23434],[],[[5,0,1,6,[7],[0,3492,19929,8],[]]],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,4,[],[1,0,23138],[],[[5,0,1,6,[7],[1,1355,21685],[]]],[],[1,1,1,1]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*1 Login Password Test","*E:\\1Майбутнє\\Course_4\\Team\\SecretChat\\Tests\\1_login_password_test.robot","*1_login_password_test.robot","*<p>Checking the secret-chat: <a href=\"http://secretchat.eu-4.evennode.com/\">http://secretchat.eu-4.evennode.com/\x3c/a>\x3c/p>","*User must sign in to check out","*<p>Checking the chat and download some items.\x3c/p>","*Smoke","*WebDriverException: Message: chrome not reachable\n  (Session info: chrome=61.0.3163.100)\n  (Driver info: chromedriver=2.33.506120 (e3e53437346286c0bc2d2dc9aa4915ba81d9023f),platform=Windows NT 10.0.15063 x86_64)\n"]);
+window.output["strings"] = window.output["strings"].concat(["*","*General test chat","*E:\\1Майбутнє\\Course_4\\Team\\SecretChat\\Tests\\General_test_chat.robot","*General_test_chat.robot","*<p>Checking the secret-chat: <a href=\"http://secretchat.eu-4.evennode.com/\">http://secretchat.eu-4.evennode.com/\x3c/a>\x3c/p>","*User must sign in to check out","*<p>Checking the chat and download some items.\x3c/p>","*Smoke"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:20","fail":1,"label":"Critical Tests","pass":0},{"elapsed":"00:00:20","fail":1,"label":"All Tests","pass":0}],[{"elapsed":"00:00:20","fail":1,"label":"Smoke","pass":0}],[{"elapsed":"00:00:23","fail":1,"id":"s1","label":"1 Login Password Test","name":"1 Login Password Test","pass":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:22","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:00:22","fail":0,"label":"All Tests","pass":1}],[{"elapsed":"00:00:22","fail":0,"label":"Smoke","pass":1}],[{"elapsed":"00:00:23","fail":0,"id":"s1","label":"General test chat","name":"General test chat","pass":1}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1507673902476;
+window.output["baseMillis"] = 1508673907164;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 23484;
+window.output["generated"] = 23213;
 </script>
 <script type="text/javascript">
 window.settings = {"background":{"fail":"#f66","nonCriticalFail":"#9e9","pass":"#9e9"},"logURL":"log.html","title":""};
